# helix-trainer

./: .gitignore  Cargo.toml  README.md  exercises.toml  package.json
exercises/: README.md
exercises/01-movement/: 01-basic-motion.hxt  02-word-motion.hxt  03-find-and-till.hxt  04-line-navigation.hxt  05-scrolling-and-jumps.hxt
exercises/02-selection/: 01-line-selection.hxt  02-extend-mode.hxt  03-collapse-and-flip.hxt  04-select-all.hxt
exercises/03-changes/: 01-delete-and-change.hxt  02-yank-and-paste.hxt  03-undo-redo-repeat.hxt  04-indent-and-join.hxt  05-case-and-replace.hxt
exercises/04-text-objects/: 01-delimiter-objects.hxt  02-word-paragraph.hxt  03-treesitter-objects.hxt  03-treesitter-objects.js  04-combining-objects.hxt  04-combining-objects.js
exercises/05-surround/: 01-add-surround.hxt  02-replace-surround.hxt  03-delete-surround.hxt  04-surround-workflows.hxt
exercises/06-multi-selection/: 01-regex-select.hxt  02-split-selection.hxt  03-duplicate-cursors.hxt  04-keep-remove.hxt  05-rotate-and-align.hxt
exercises/07-search/: 01-search-basics.hxt  02-search-selection.hxt  03-search-and-replace.hxt  04-regex-patterns.hxt
exercises/08-goto-mode/: 01-file-navigation.hxt  02-lsp-navigation.hxt  03-buffer-navigation.hxt  04-zed-git-integration.hxt
exercises/09-space-mode/: 01-pickers.hxt  02-lsp-commands.hxt  03-clipboard-and-comments.hxt
src/: display.rs  exercises.rs  hxt.rs  lib.rs  main.rs  metadata.rs  progress.rs  reset.ts
tests/: cli_init.rs  event_handler.rs  hxt_proptest.rs  init_lib.rs  tui_snapshots.rs  tui_state_machine.rs
(+31 files in other folders)
