[package]
name = "helix-trainer"
version = "1.0.0"
edition = "2024"
authors = ["Steve Godin"]
description = "Interactive Helix keybinding exercises — learn by doing"
license = "MIT"
keywords = ["helix", "editor", "keybindings", "training", "tutorial"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
walkdir = "2"
include_dir = "0.7"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
